2012-01-21

 * added responses for different GET requests
 * added a default response for POST requests


 * added basic html response 

2014-01-07  Titus Brown  <t@Titus-MacBook-Air-2.local>

 * Initialized repository, created server.py and README.