@@ -1,0 +1,66 @@
+{% extends "base.html"%}
+
+
+{% block content %}
+
+<script type='text/javascript'>
+    $(function()
+    {
+
+
+        $input_file = $("#file");
+
+        $input_form = $("form");
+
+        $input_submit = $("input[type=submit]");
+
+        $percent_complete = $("#percent_complete");
+
+        $input_form.submit(function(e)
+        {
+            var formData = new FormData();
+            formData.append('file', $input_file[0].files[0]);
+            $percent_complete.empty();
+
+            var xhr = new XMLHttpRequest();
+            xhr.open('POST', '/upload_ajax_receive', true);
+            #("#loading").show();
+            xhr.onreadystatechange = function(response)
+            {
+                /*
+                0: request not initialized
+                1: server connection established
+                2: request received
+                3: processing request
+                4: request finished and response is ready
+                */
+
+                if(xhr.readyState == 4 && xhr.status == 200)
+                {
+                    $("#loading").after("<br/>Your Image:<br/><img width=40% src='image_raw?special=latest'
+                    $("#loading").hide();
+                }
+                else{
+                    $("#loading").show();
+                }
+            }
+
+            xhr.send(formData);
+
+            e.preventDefault();
+
+    });
+
+});
+</script>
+
+Upload a PNG ASYNC:
+<form enctype='multipart/form-data'>
+    Filename: <input type='file' name='file' id="file"><p>
+    <input type='submit'>
+    <h3 id="loading" style='display:none;'>Uploading...</h3>
+</form>
+
+{% endblock %}
+                }
+
