@@ -1,12 +1,12 @@
-{% extends "base.html" %}
+{% extends "base.html %}
+
 
 {% block content %}
-<script type="text/javascript">
-
-</script>
 
 Here is your image:
 <p>
 <img width=40% src='image_raw?special=latest'/>
 
+
 {% endblock %}
+
