@@ -1,12 +1,12 @@
 {% extends "base.html" %}
 
-{% block content %}
-<script type="text/javascript">
 
-</script>
+{% block content %}
 
 Here is your image:
 <p>
 <img width=40% src='image_raw?special=latest'/>
+</p>
 
 {% endblock %}
+
